tests/ui/consts/const-extern-fn/feature-gate-const_extern_fn.stderr
error[E0658]: `cdecl` as a `const fn` ABI is unstable
  --> $DIR/feature-gate-const_extern_fn.rs:7:14
   |
LL | const extern "cdecl" fn foo4() {}
   |              ^^^^^^^
   |
   = note: see issue #64926 <https://github.com/rust-lang/rust/issues/64926> for more information
   = help: add `#![feature(const_extern_fn)]` to the crate attributes to enable

error[E0658]: `cdecl` as a `const fn` ABI is unstable
  --> $DIR/feature-gate-const_extern_fn.rs:11:21
   |
LL | const unsafe extern "cdecl" fn bar4() {}
   |                     ^^^^^^^
   |
   = note: see issue #64926 <https://github.com/rust-lang/rust/issues/64926> for more information
   = help: add `#![feature(const_extern_fn)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
